--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -1,91 +1,161 @@
-# .github/workflows/update-changelog.yml
+# =============================================================
+# Repo: Despensinha/changelog
+# Caminho: .github/workflows/update-changelog.yml
+#
+# Secrets necessários:
+#   - ANTHROPIC_API_KEY (chave da API do Claude)
+#
+# Pode ser acionado:
+#   - Automaticamente: quando os repos de front/back publicam release
+#   - Manualmente: via workflow_dispatch no GitHub (botão "Run workflow")
+# =============================================================
 name: Update Changelog
+
 on:
   repository_dispatch:
     types: [release-published]
-  workflow_dispatch: # pra poder rodar manualmente tb
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   update:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout changelog repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: pip install httpx
 
       - name: Fetch releases from both repos
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh api Despensinha/despensinha-main-api-modular/releases --limit 20 --jq '.[] | {tag: .tag_name, date: .published_at, body: .body}' > /tmp/front-releases.json
-          gh api Despensinha/despensinha-admin-app/releases --limit 20 --jq '.[] | {tag: .tag_name, date: .published_at, body: .body}' > /tmp/back-releases.json
+          echo "📦 Buscando releases do backend..."
+          gh api "repos/Despensinha/despensinha-main-api-modular/releases?per_page=20" \
+            --jq '[.[] | {tag: .tag_name, date: .published_at, body: .body}]' \
+            > /tmp/back-releases.json
+
+          echo "📦 Buscando releases do frontend..."
+          gh api "repos/Despensinha/despensinha-admin-app/releases?per_page=20" \
+            --jq '[.[] | {tag: .tag_name, date: .published_at, body: .body}]' \
+            > /tmp/front-releases.json
+
+          echo ""
+          echo "Releases encontradas:"
+          echo "  Backend:  $(python3 -c "import json; print(len(json.load(open('/tmp/back-releases.json'))))")"
+          echo "  Frontend: $(python3 -c "import json; print(len(json.load(open('/tmp/front-releases.json'))))")"
 
       - name: Generate translated changelog
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: |
-          cat <<'SCRIPT' > generate.py
-          import json, os, subprocess, sys
-          from datetime import datetime
+          cat <<'PYEOF' > /tmp/generate.py
+          import json
+          import os
+          import sys
 
-          # Lê releases
-          with open("/tmp/front-releases.json") as f:
-              front = [json.loads(line) for line in f if line.strip()]
-          with open("/tmp/back-releases.json") as f:
-              back = [json.loads(line) for line in f if line.strip()]
+          import httpx
 
-          # Monta prompt
-          releases_text = "## Frontend Releases\n"
-          for r in front[:10]:
-              releases_text += f"\n### {r['tag']} ({r['date'][:10]})\n{r['body']}\n"
+          def load_releases(filepath):
+              with open(filepath) as f:
+                  return json.load(f)
 
-          releases_text += "\n## Backend Releases\n"
-          for r in back[:10]:
-              releases_text += f"\n### {r['tag']} ({r['date'][:10]})\n{r['body']}\n"
+          def build_prompt(front_releases, back_releases):
+              releases_text = "## Frontend Releases\n"
+              for r in front_releases[:10]:
+                  date = r["date"][:10] if r["date"] else "sem data"
+                  body = r["body"] or "(sem conteúdo)"
+                  releases_text += f"\n### {r['tag']} ({date})\n{body}\n"
 
-          prompt = f"""Você é um redator de changelog para uma plataforma SaaS.
+              releases_text += "\n## Backend Releases\n"
+              for r in back_releases[:10]:
+                  date = r["date"][:10] if r["date"] else "sem data"
+                  body = r["body"] or "(sem conteúdo)"
+                  releases_text += f"\n### {r['tag']} ({date})\n{body}\n"
+
+              return f"""Você é um redator de changelog para a plataforma Despensinha.
           Receba os changelogs técnicos do frontend e backend abaixo e gere UM changelog
           unificado em português brasileiro, voltado para usuários finais.
 
           Regras:
           - Agrupe por data (mais recente primeiro), unificando front+back do mesmo período
-          - Categorias: 🚀 Novidades, ✨ Melhorias, 🐛 Correções
-          - Ignore: refatorações internas, bumps de dependência, mudanças de CI/CD
+          - Use estas categorias quando houver itens: 🚀 Novidades, ✨ Melhorias, 🐛 Correções
+          - Ignore completamente: refatorações internas, bumps de dependência, mudanças de CI/CD, chores
           - Linguagem simples e amigável, sem jargão técnico
-          - Formato Markdown
-          - Título: "Histórico de Atualizações"
+          - Se um item técnico não tiver impacto visível pro usuário, não inclua
+          - Formato Markdown limpo
+          - Título do documento: "# Histórico de Atualizações"
+          - Cada grupo de data deve ser um ## com formato "## DD/MM/AAAA"
+          - Se não houver nenhuma mudança relevante pro usuário em uma release, pule ela
+
+          Changelogs técnicos:
 
           {releases_text}"""
 
-          import httpx
-          resp = httpx.post(
-              "https://api.anthropic.com/v1/messages",
-              headers={{
-                  "x-api-key": os.environ["ANTHROPIC_API_KEY"],
-                  "content-type": "application/json",
-                  "anthropic-version": "2023-06-01"
-              }},
-              json={{
-                  "model": "claude-sonnet-4-20250514",
-                  "max_tokens": 4096,
-                  "messages": [{{"role": "user", "content": prompt}}]
-              }},
-              timeout=60
-          )
-          data = resp.json()
-          md = data["content"][0]["text"]
+          def main():
+              front = load_releases("/tmp/front-releases.json")
+              back = load_releases("/tmp/back-releases.json")
 
-          with open("CHANGELOG.md", "w") as f:
-              f.write(md)
+              if not front and not back:
+                  print("⚠️ Nenhuma release encontrada. Nada a fazer.")
+                  sys.exit(0)
 
-          print("Changelog gerado com sucesso!")
-          SCRIPT
+              prompt = build_prompt(front, back)
+              api_key = os.environ["ANTHROPIC_API_KEY"]
 
-          pip install httpx --quiet
-          python generate.py
+              print("🤖 Chamando Claude API...")
+              resp = httpx.post(
+                  "https://api.anthropic.com/v1/messages",
+                  headers={
+                      "x-api-key": api_key,
+                      "content-type": "application/json",
+                      "anthropic-version": "2023-06-01",
+                  },
+                  json={
+                      "model": "claude-sonnet-4-20250514",
+                      "max_tokens": 4096,
+                      "messages": [{"role": "user", "content": prompt}],
+                  },
+                  timeout=120,
+              )
+
+              if resp.status_code != 200:
+                  print(f"❌ Erro na API: {resp.status_code}")
+                  print(resp.text)
+                  sys.exit(1)
+
+              data = resp.json()
+              md = data["content"][0]["text"]
+
+              with open("CHANGELOG.md", "w") as f:
+                  f.write(md)
+
+              print("✅ CHANGELOG.md gerado!")
+
+          if __name__ == "__main__":
+              main()
+          PYEOF
+
+          python3 /tmp/generate.py
 
       - name: Commit and push
         run: |
           git config user.name "changelog-bot"
-          git config user.email "bot@example.com"
+          git config user.email "changelog-bot@despensinha.com"
           git add CHANGELOG.md
-          git diff --cached --quiet || git commit -m "docs: atualiza changelog [skip ci]"
-          git push
+          if git diff --cached --quiet; then
+            echo "📝 Sem mudanças no changelog."
+          else
+            git commit -m "docs: atualiza changelog [skip ci]"
+            git push
+            echo "🚀 Changelog atualizado e publicado!"
+          fi
