fix: 🐛 update repository references in changelog workflow and README
* Corrected the repository name in the workflow file from `Despensinha/changelog` to `Despensinha/despensinha-changelog`.
* Updated the `CHANGELOG_URL` in the README to point to the correct repository path.

--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -1,5 +1,5 @@
 # =============================================================
-# Repo: Despensinha/changelog
+# Repo: Despensinha/despensinha-changelog
 # Caminho: .github/workflows/update-changelog.yml
 #
 # Secrets necessários:
@@ -37,7 +37,7 @@ jobs:
 
       - name: Fetch releases from both repos
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.CHANGELOG_PAT }}
         run: |
           echo "📦 Buscando releases do backend..."
           gh api "repos/Despensinha/despensinha-main-api-modular/releases?per_page=20" \
